fix: align content in how-it-works block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -316,7 +316,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 94px;
+  margin-top: 30px;
 }
 .try-now {
   width: 696px;
